Scrollbar + Nav Fix + Election Process Details (not done)
- added scrollbar to student dashboard
- fixed font of student navigation header
- removed unecessary comments in admin about php
- added Election Process details page (ongoing development)

--- a/css/admin_css/style_adminNav.css
+++ b/css/admin_css/style_adminNav.css
@@ -67,11 +67,6 @@ body{
   overflow-y: scroll;
 }
 
-/* Scrollbar to all pages */
-/* html{
-  overflow-y: scroll;
-} */
-
 /* width */
 ::-webkit-scrollbar {
   width: 12px;
